# doctor

./: .gitignore  CHANGES.md  LICENSE  README.md  RELEASE.md  doctor.opam  dune-project  ocaml-doctor.opam
.github/workflows/: ci.yml
docs/: diagnostic-contract.md
lib/: check.ml  cli.ml  dune  editor.ml  env.ml  opam.ml  platform.ml  process.ml  report.ml  version.ml
test/: dune  test_cli.ml  test_contract.ml  test_diagnostics.ml  test_env.ml  test_process.ml  test_report.ml
test/fixtures/: opam_env_sync_windows_suggestion.txt  report_all_ok.txt  report_error.txt  report_error_run.json  report_one_warning.json  report_warn.txt
